force-app/main/default/objects/Presenter__c/Presenter__c.object-meta.xml
<CustomObject>
    <label>Presenter</label>
    <nameField>
        <label>Presenter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presenter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>