force-app/main/default/objects/Presenter__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Presenter</relationshipLabel>
    <relationshipName>Presenter</relationshipName>
    <type>Lookup</type>
</CustomField>