force-app/main/default/objects/Presenter__c/fields/New_Presenter_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Presenter_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>New Presenter Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>