force-app/main/default/objects/Presenter__c/fields/Number_of_Presentations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Presentations__c</fullName>
    <label>Number of Presentations</label>
    <summaryForeignKey>Speaker__c.Presenter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>